Revision history for Perl extension Alien-FLTK

{{$NEXT}}

v1.3.4 2020-01-20T15:05:40Z

	- Pull fltk 1.3.x snapshots from github

v1.3.3 2016-04-18T15:27:53Z

	- Configure 64bit lib for relocation
	- New opengl example

v1.3.3 2016-04-14T01:45:26Z

    - Build with stable 1.3.3 release of FLTK
    - Resolve missing prereq (I hope)

Version 0.09635001 | 2012-07-22 08:40:13Z (Sun, 22 Jul 2012) | 5dae2c1

    Resolved Issues/Bug Fixes:
     * Define FL_LIBRARY during build
     * Work around Win32 bug

    Notes:
     * Builds against r9635 of the 1.3.x branch of fltk

Version 0.07704001 | 2010-09-18 01:55:22Z (Sat, 18 Sep 2010) | 70e72ea

    Resolved Issues/Bug Fixes:
     * #define symbols for dirent location were malformed

Version 0.07694001 | 2010-09-04 03:56:05Z (Sat, 04 Sep 2010) | 45bb2d7

    Selected Upstream Changes:
     * [r7704] Fixed Windows class name (xclass) setup and caching mechanism.
       This was not yet completely converted to UTF-8. Cleaned up related
       code, removed old comments.
       Tested and confirmed that the xclass() setup works and that different
       icons can be set for different window classes (as it was in FLTK
       1.1.10).
     * [r7697] Full support of UTF-8 text for PostScript printing/output in 2
         ways:
          - Latin characters (unicode <= 17F) and a few other symbols, among
            which the ?\226?\130?\172 (Euro), are output using vectorial fonts
          - All other characters are output as a bitmap copy of their
            offscreen rendition.
     * [r7696] Simpler PostScript output of Fl_Bitmap objects
     * [r7695] PostScript output of Fl_Pixmap objects: accept now arbitrarily
       large pixmaps

Version 0.07694001 | 2010-09-04 03:56:05Z (Sat, 04 Sep 2010) | 45bb2d7

    Notes:
     * Builds against r7694 of the 1.3.x branch of fltk

Version 0.07063001 | 2010-02-15 22:06:30Z (Mon, 15 Feb 2010) | b0766e6

    Resolved Issues/Bug Fixes:
     * Untested CygWin configuration and build fixes