@@ -2,6 +2,8 @@ Revision history for Perl extension Alien-FLTK
 
 {{$NEXT}}
 
+	- Correct JSON::Tiny prereq in cpanfile
+
 v1.3.4 2020-01-20T15:05:40Z
 
 	- Pull fltk 1.3.x snapshots from github
